# password-tool

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: rust.yml
assets/: manifest.webmanifest  sw.js
assets/style/: dark_mode.css  fonts.css  main.css  mobile.css
pkg/: index.html  sw.js
src/: checkbox.rs  foldable_info.rs  generation.rs  keylogger_protection.rs  lib.rs  main.rs  message.rs  psl.rs  settings.rs  util.rs
static/: index.html
