[package]
name = "password_manager"
version = "0.2.1"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = {version="0.14.3", features=["web_sys"]}
sha3 = "0.8.2"
hex = "0.4.2"
stdweb = "0.4.20"
string-tools = "0.1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
lto = true
opt-level = 's'

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "Element",
    "Document",
    "Permissions",
    "Navigator"
]