[package]
name = "password-tool"
version = "0.2.3"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = {version="0.14.3", features=["web_sys"]}
sha3 = "0.8.2"
hex = "0.4.2"
string-tools = "0.1.0"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 's'

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlDocument",
    "Element",
    "Document",
    "Permissions",
    "Navigator",
    "Crypto",
]