[package]
name = "password-tool"
version = "0.2.3"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[dependencies]
yew = "0.17"
sha3 = "0.9"
hex = "0.4"
publicsuffix = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[profile.release]
lto = true
opt-level = 's'

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlDocument",
    "Element",
    "Document",
    "Permissions",
    "Navigator",
    "Crypto",
    "Url",
]